deploy: f6fd5819e937e5c55150cba0793916a7dbb8bee5

--- a/api.html
+++ b/api.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="grss.fit_optical" href="_autosummary/grss.fit_optical.html" />
-    <link rel="prev" title="(11468) Shantanunaidu orbit determination test" href="tests/fit/shantanunaidu.html" />
+    <link rel="prev" title="(11468) Shantanunaidu orbit determination test" href="tests/python/fit/shantanunaidu.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -95,7 +95,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="tests/fit/shantanunaidu.html" title="previous chapter">(11468) Shantanunaidu orbit determination test</a></li>
+      <li>Previous: <a href="tests/python/fit/shantanunaidu.html" title="previous chapter">(11468) Shantanunaidu orbit determination test</a></li>
       <li>Next: <a href="_autosummary/grss.fit_optical.html" title="next chapter">grss.fit_optical</a></li>
   </ul></li>
 </ul>
