deploy: 9365307ff1b5810776b07ea23a17079315f97fab

--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; GRSS 0.7.1 documentation</title>
+    <title>Index &#8212; GRSS 0.8.0 documentation</title>
   
   
   
@@ -124,7 +124,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v0.7.1 documentation</p>
+    <p class="title logo__title">GRSS v0.8.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -891,18 +891,6 @@ document.write(`
 <h2 id="O">O</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.obliquityList">obliquityList (grss.prop_simulation.ForceParameters property)</a>
-</li>
-      <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.obliquityToEcliptic">obliquityToEcliptic (grss.prop_simulation.Body property)</a>
-
-      <ul>
-        <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.obliquityToEcliptic">(grss.prop_simulation.IntegBody property)</a>
-</li>
-        <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.obliquityToEcliptic">(grss.prop_simulation.SpiceBody property)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.observerInfo">observerInfo (grss.prop_simulation.propSimulation property)</a>
 </li>
   </ul></td>
@@ -923,8 +911,28 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit_simulation.FitSimulation.html#grss.fit_simulation.FitSimulation.plot_summary">plot_summary() (grss.fit_simulation.FitSimulation method)</a>
 </li>
+      <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.poleDec">poleDec (grss.prop_simulation.Body property)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.poleDec">(grss.prop_simulation.IntegBody property)</a>
+</li>
+        <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.poleDec">(grss.prop_simulation.SpiceBody property)</a>
+</li>
+      </ul></li>
+      <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.poleDecList">poleDecList (grss.prop_simulation.ForceParameters property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.poleRA">poleRA (grss.prop_simulation.Body property)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.poleRA">(grss.prop_simulation.IntegBody property)</a>
+</li>
+        <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.poleRA">(grss.prop_simulation.SpiceBody property)</a>
+</li>
+      </ul></li>
+      <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.poleRAList">poleRAList (grss.prop_simulation.ForceParameters property)</a>
+</li>
       <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.pos">pos (grss.prop_simulation.Body property)</a>
 
       <ul>
@@ -1130,7 +1138,7 @@ document.write(`
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Jul 20, 2023.
+  Last updated on Jul 21, 2023.
   <br/>
 </p>
   </div>
