deploy: 07f51a2e97c2bfe901b9b41a047eb12a814c3093

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@
 
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - GRSS 0.8.2 documentation</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /><title>Search - GRSS 0.8.3 documentation</title>
   
   
   
@@ -126,7 +126,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v0.8.2 documentation</p>
+    <p class="title logo__title">GRSS v0.8.3 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -409,6 +409,10 @@ document.write(`
   
   <div class="footer-item">
     
+<p class="component-author">
+By Rahil Makadia
+</p>
+
   </div>
   
   <div class="footer-item">
@@ -424,7 +428,7 @@ document.write(`
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Jul 23, 2023.
+  Last updated on Jul 24, 2023.
   <br/>
 </p>
   </div>
