--- a/_autosummary/grss.fit_utils.parallax_constants_to_lat_lon_alt.html
+++ b/_autosummary/grss.fit_utils.parallax_constants_to_lat_lon_alt.html
@@ -18,7 +18,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-TileImage" content="mstile-310x310.png">
-    <title>grss.fit_utils.parallax_constants_to_lat_lon_alt &#8212; GRSS 0.8.2 documentation</title>
+    <title>grss.fit_utils.parallax_constants_to_lat_lon_alt &#8212; GRSS 0.8.3 documentation</title>
   
   
   
@@ -136,7 +136,7 @@
     <script>document.write(`<img src="../_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v0.8.2 documentation</p>
+    <p class="title logo__title">GRSS v0.8.3 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -523,6 +523,10 @@ and phi’ is the geocentric latitude of the observer</p></li>
   
   <div class="footer-item">
     
+<p class="component-author">
+By Rahil Makadia
+</p>
+
   </div>
   
   <div class="footer-item">
@@ -538,7 +542,7 @@ and phi’ is the geocentric latitude of the observer</p></li>
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Jul 23, 2023.
+  Last updated on Jul 24, 2023.
   <br/>
 </p>
   </div>
