--- a/tests/python/fit/eggl.html
+++ b/tests/python/fit/eggl.html
@@ -18,7 +18,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="msapplication-TileImage" content="mstile-310x310.png">
-    <title>(28751) Eggl orbit determination test &#8212; GRSS 0.8.2 documentation</title>
+    <title>(28751) Eggl orbit determination test &#8212; GRSS 0.8.3 documentation</title>
   
   
   
@@ -139,7 +139,7 @@
     <script>document.write(`<img src="../../../_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v0.8.2 documentation</p>
+    <p class="title logo__title">GRSS v0.8.3 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -685,6 +685,10 @@ assert bhatt_coeff &gt; 0.90
   
   <div class="footer-item">
     
+<p class="component-author">
+By Rahil Makadia
+</p>
+
   </div>
   
   <div class="footer-item">
@@ -700,7 +704,7 @@ assert bhatt_coeff &gt; 0.90
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Jul 23, 2023.
+  Last updated on Jul 24, 2023.
   <br/>
 </p>
   </div>
