deploy: 9bd56735b86f20370bb7a66786351144f1bdc4da

--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; GRSS 0.8.5 documentation</title>
+    <title>Index &#8212; GRSS 0.9.0 documentation</title>
   
   
   
@@ -124,7 +124,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v0.8.5 documentation</p>
+    <p class="title logo__title">GRSS v0.9.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -549,12 +549,14 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.fit_optical.eliminate_obs.html#grss.fit_optical.eliminate_obs">eliminate_obs() (in module grss.fit_optical)</a>
 </li>
-      <li><a href="_autosummary/grss.fit_utils.et2mjd.html#grss.fit_utils.et2mjd">et2mjd() (in module grss.fit_utils)</a>
+      <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.ephem">ephem (grss.prop_simulation.propSimulation property)</a>
 </li>
-      <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.evalApparentState">evalApparentState (grss.prop_simulation.propSimulation property)</a>
+      <li><a href="_autosummary/grss.fit_utils.et2mjd.html#grss.fit_utils.et2mjd">et2mjd() (in module grss.fit_utils)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.evalApparentState">evalApparentState (grss.prop_simulation.propSimulation property)</a>
+</li>
       <li><a href="_autosummary/grss.prop_simulation.Event.html#grss.prop_simulation.Event">Event (class in grss.prop_simulation)</a>
 </li>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.events">events (grss.prop_simulation.propSimulation property)</a>
