deploy: 256a0ef1cb0d86627cb125d34ac8980684c31ce4

--- a/tests/python/prop/apophis.html
+++ b/tests/python/prop/apophis.html
@@ -503,7 +503,7 @@ while t_temp &lt;= tf:
 eval_apparent_state = False
 t_eval_utc = False
 converged_light_time = False
-prop_sim.set_integration_parameters(tf, t_eval, t_eval_utc, eval_apparent_state, converged_light_time, tolInteg=1e-4)
+prop_sim.set_integration_parameters(tf, t_eval, t_eval_utc, eval_apparent_state, converged_light_time)
 </pre></div>
 </div>
 </div>
