deploy: 86a06c1ced24f2c44aa50ddec050319623a53cf6

--- a/genindex.html
+++ b/genindex.html
@@ -385,7 +385,6 @@ document.write(`
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#X"><strong>X</strong></a>
  
 </div>
@@ -870,6 +869,12 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop_simulation.NongravParamaters.html#grss.prop_simulation.NongravParamaters.n">n (grss.prop_simulation.NongravParamaters property)</a>
 </li>
+      <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.n2Derivs">n2Derivs (grss.prop_simulation.IntegBody property)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop_simulation.IntegrationParameters.html#grss.prop_simulation.IntegrationParameters.n2Derivs">(grss.prop_simulation.IntegrationParameters property)</a>
+</li>
+      </ul></li>
       <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.name">name (grss.prop_simulation.Body property)</a>
 
       <ul>
@@ -928,10 +933,10 @@ document.write(`
         <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.poleDec">(grss.prop_simulation.SpiceBody property)</a>
 </li>
       </ul></li>
-      <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.poleDecList">poleDecList (grss.prop_simulation.ForceParameters property)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.poleDecList">poleDecList (grss.prop_simulation.ForceParameters property)</a>
+</li>
       <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.poleRA">poleRA (grss.prop_simulation.Body property)</a>
 
       <ul>
@@ -942,19 +947,13 @@ document.write(`
       </ul></li>
       <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.poleRAList">poleRAList (grss.prop_simulation.ForceParameters property)</a>
 </li>
-      <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.pos">pos (grss.prop_simulation.Body property)</a>
-
-      <ul>
-        <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.pos">(grss.prop_simulation.IntegBody property)</a>
-</li>
-        <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.pos">(grss.prop_simulation.SpiceBody property)</a>
-</li>
-      </ul></li>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.preprocess">preprocess() (grss.prop_simulation.propSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.fit_simulation.FitSimulation.html#grss.fit_simulation.FitSimulation.print_summary">print_summary() (grss.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation">propSimulation (class in grss.prop_simulation)</a>
+</li>
+      <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.propStm">propStm (grss.prop_simulation.IntegBody property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1006,10 +1005,10 @@ document.write(`
         <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.set_J2">(grss.prop_simulation.SpiceBody method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.set_sim_constants">set_sim_constants() (grss.prop_simulation.propSimulation method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.fit_simulation.FitSimulation.html#grss.fit_simulation.FitSimulation.sort_array_by_another">sort_array_by_another() (grss.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.spiceBodies">spiceBodies (grss.prop_simulation.propSimulation property)</a>
@@ -1019,6 +1018,8 @@ document.write(`
       <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.spiceId">spiceId (grss.prop_simulation.SpiceBody property)</a>
 </li>
       <li><a href="_autosummary/grss.prop_simulation.ForceParameters.html#grss.prop_simulation.ForceParameters.spiceIdList">spiceIdList (grss.prop_simulation.ForceParameters property)</a>
+</li>
+      <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.stm">stm (grss.prop_simulation.IntegBody property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1064,20 +1065,6 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.prop_simulation.Constants.html#grss.prop_simulation.Constants.tu2sec">tu2sec (grss.prop_simulation.Constants property)</a>
 </li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/grss.prop_simulation.Body.html#grss.prop_simulation.Body.vel">vel (grss.prop_simulation.Body property)</a>
-
-      <ul>
-        <li><a href="_autosummary/grss.prop_simulation.IntegBody.html#grss.prop_simulation.IntegBody.vel">(grss.prop_simulation.IntegBody property)</a>
-</li>
-        <li><a href="_autosummary/grss.prop_simulation.SpiceBody.html#grss.prop_simulation.SpiceBody.vel">(grss.prop_simulation.SpiceBody property)</a>
-</li>
-      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -1153,7 +1140,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Aug 11, 2023.
+  Last updated on Aug 18, 2023.
   <br/>
 </p>
   </div>
