deploy: 63e4de4efb29667b9b44e522fbfd65df8f4d8dd2

--- a/tests/python/prop/icarus.html
+++ b/tests/python/prop/icarus.html
@@ -535,7 +535,7 @@ prop_sim.add_integ_body(icarus)
 plt.figure(figsize=(6, 6), dpi=150)
 axs = plt.gca()
 prop.plot_solar_system(axs, xy_plane=True, alpha=0.5)
-axs.plot(arr[:,0], arr[:,1], &#39;--&#39;, lw=0.2)
+axs.plot(arr[:,0], arr[:,1], &#39;-&#39;, lw=0.2)
 axs.set_xlabel(&quot;x [AU]&quot;)
 axs.set_ylabel(&quot;y [AU]&quot;)
 axs.set_aspect(&#39;equal&#39;)
