--- a/genindex.html
+++ b/genindex.html
@@ -518,6 +518,8 @@ document.write(`
       </ul></li>
       <li><a href="_autosummary/grss.prop_simulation.CloseApproachParameters.html#grss.prop_simulation.CloseApproachParameters.centralBody">centralBody (grss.prop_simulation.CloseApproachParameters property)</a>
 </li>
+      <li><a href="_autosummary/grss.prop_simulation.CloseApproachParameters.html#grss.prop_simulation.CloseApproachParameters.centralBodySpiceId">centralBodySpiceId (grss.prop_simulation.CloseApproachParameters property)</a>
+</li>
       <li><a href="_autosummary/grss.fit_simulation.FitSimulation.html#grss.fit_simulation.FitSimulation.check_and_add_events">check_and_add_events() (grss.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.fit_simulation.FitSimulation.html#grss.fit_simulation.FitSimulation.check_convergence">check_convergence() (grss.fit_simulation.FitSimulation method)</a>
@@ -1209,7 +1211,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Sep 07, 2023.
+  Last updated on Sep 09, 2023.
   <br/>
 </p>
   </div>
