deploy: 17a94f50740fab51f8893a4888349821fcc192a9

--- a/genindex.html
+++ b/genindex.html
@@ -692,6 +692,8 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit_utils.get_similarity_stats.html#grss.fit_utils.get_similarity_stats">get_similarity_stats() (in module grss.fit_utils)</a>
 </li>
+      <li><a href="_autosummary/grss.prop_simulation.propSimulation.html#grss.prop_simulation.propSimulation.get_spiceBody_state">get_spiceBody_state() (grss.prop_simulation.propSimulation method)</a>
+</li>
       <li><a href="_autosummary/grss.prop_simulation.CloseApproachParameters.html#grss.prop_simulation.CloseApproachParameters.gravFocusFactor">gravFocusFactor (grss.prop_simulation.CloseApproachParameters property)</a>
 </li>
       <li>
@@ -1211,7 +1213,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Sep 12, 2023.
+  Last updated on Sep 15, 2023.
   <br/>
 </p>
   </div>
