--- a/genindex.html
+++ b/genindex.html
@@ -50,7 +50,7 @@
     <link rel="search" title="Search" href="search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-    <meta name="docbuild:last-update" content="Oct 11, 2023"/>
+    <meta name="docbuild:last-update" content="Oct 12, 2023"/>
   </head>
   
   
@@ -473,15 +473,17 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.add_integ_body">add_integ_body() (grss.prop.prop_simulation.propSimulation method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.add_iteration">add_iteration() (grss.fit.fit_simulation.FitSimulation method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.add_spice_body">add_spice_body() (grss.prop.prop_simulation.propSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.NongravParamaters.html#grss.prop.prop_simulation.NongravParamaters.alpha">alpha (grss.prop.prop_simulation.NongravParamaters property)</a>
 </li>
       <li><a href="_autosummary/grss.fit.fit_optical.apply_debiasing_scheme.html#grss.fit.fit_optical.apply_debiasing_scheme">apply_debiasing_scheme() (in module grss.fit.fit_optical)</a>
+</li>
+      <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.apply_outlier_rejection">apply_outlier_rejection() (grss.fit.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.fit.fit_optical.apply_weights.html#grss.fit.fit_optical.apply_weights">apply_weights() (in module grss.fit.fit_optical)</a>
 </li>
@@ -1076,6 +1078,8 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit.fit_utils.radec2icrf.html#grss.fit.fit_utils.radec2icrf">radec2icrf() (in module grss.fit.fit_utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.Body.html#grss.prop.prop_simulation.Body.radius">radius (grss.prop.prop_simulation.Body property)</a>
 
       <ul>
@@ -1084,11 +1088,7 @@ document.write(`
         <li><a href="_autosummary/grss.prop.prop_simulation.SpiceBody.html#grss.prop.prop_simulation.SpiceBody.radius">(grss.prop.prop_simulation.SpiceBody property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.fit.fit_utils.rec2lat.html#grss.fit.fit_utils.rec2lat">rec2lat() (in module grss.fit.fit_utils)</a>
-</li>
-      <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.reject_outliers">reject_outliers() (grss.fit.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.remove_body">remove_body() (grss.prop.prop_simulation.propSimulation method)</a>
 </li>
@@ -1283,7 +1283,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Oct 11, 2023.
+  Last updated on Oct 12, 2023.
   <br/>
 </p>
   </div>
