deploy: 53a32ecaad30ee00b8e9f82c8fec21e5d19281a4

--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; GRSS 1.2.0 documentation</title>
+    <title>Index &#8212; GRSS 1.2.1 documentation</title>
   
   
   
@@ -136,7 +136,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v1.2.0 documentation</p>
+    <p class="title logo__title">GRSS v1.2.1 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -1059,6 +1059,8 @@ document.write(`
         <li><a href="_autosummary/grss.prop.prop_simulation.SpiceBody.html#grss.prop.prop_simulation.SpiceBody.poleRA">(grss.prop.prop_simulation.SpiceBody property)</a>
 </li>
       </ul></li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.IntegBody.html#grss.prop.prop_simulation.IntegBody.prepare_stm">prepare_stm() (grss.prop.prop_simulation.IntegBody method)</a>
+</li>
       <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.print_summary">print_summary() (grss.fit.fit_simulation.FitSimulation method)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation">propSimulation (class in grss.prop.prop_simulation)</a>
