deploy: 9bd305987c829abf54d99f0e886bb379b3ca0ce1

--- a/genindex.html
+++ b/genindex.html
@@ -1041,8 +1041,6 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.plot_summary">plot_summary() (grss.fit.fit_simulation.FitSimulation method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.Body.html#grss.prop.prop_simulation.Body.poleDec">poleDec (grss.prop.prop_simulation.Body property)</a>
 
       <ul>
@@ -1051,6 +1049,8 @@ document.write(`
         <li><a href="_autosummary/grss.prop.prop_simulation.SpiceBody.html#grss.prop.prop_simulation.SpiceBody.poleDec">(grss.prop.prop_simulation.SpiceBody property)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.Body.html#grss.prop.prop_simulation.Body.poleRA">poleRA (grss.prop.prop_simulation.Body property)</a>
 
       <ul>
@@ -1062,7 +1062,11 @@ document.write(`
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegBody.html#grss.prop.prop_simulation.IntegBody.prepare_stm">prepare_stm() (grss.prop.prop_simulation.IntegBody method)</a>
 </li>
       <li><a href="_autosummary/grss.fit.fit_simulation.FitSimulation.html#grss.fit.fit_simulation.FitSimulation.print_summary">print_summary() (grss.fit.fit_simulation.FitSimulation method)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.print_summary">(grss.prop.prop_simulation.CloseApproachParameters method)</a>
 </li>
+      </ul></li>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation">propSimulation (class in grss.prop.prop_simulation)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegBody.html#grss.prop.prop_simulation.IntegBody.propStm">propStm (grss.prop.prop_simulation.IntegBody property)</a>
