deploy: 7b3bc5b1a7d832a8ed9468e33e424799135778d7

--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; GRSS 1.4.0 documentation</title>
+    <title>Index &#8212; GRSS 1.5.0 documentation</title>
   
   
   
@@ -136,7 +136,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v1.4.0 documentation</p>
+    <p class="title logo__title">GRSS v1.5.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -1016,6 +1016,8 @@ document.write(`
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.opik">opik (grss.prop.prop_simulation.CloseApproachParameters property)</a>
+</li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.opticalObsEval">opticalObsEval (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
   </ul></td>
 </tr></table>
