--- a/genindex.html
+++ b/genindex.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; GRSS 1.5.0 documentation</title>
+    <title>Index &#8212; GRSS 2.0.0 documentation</title>
   
   
   
@@ -50,7 +50,7 @@
     <link rel="search" title="Search" href="search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-    <meta name="docbuild:last-update" content="Nov 28, 2023"/>
+    <meta name="docbuild:last-update" content="Nov 30, 2023"/>
   </head>
   
   
@@ -137,7 +137,7 @@
     <script>document.write(`<img src="_static/grss-cropped.svg" class="logo__image only-dark" alt="GRSS - Home"/>`);</script>
   
   
-    <p class="title logo__title">GRSS v1.5.0 documentation</p>
+    <p class="title logo__title">GRSS v2.0.0 documentation</p>
   
 </a></div>
         <div class="sidebar-primary-item"><nav class="bd-links" id="bd-docs-nav" aria-label="Main">
@@ -633,9 +633,11 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit.fit_utils.et2mjd.html#grss.fit.fit_utils.et2mjd">et2mjd() (in module grss.fit.fit_utils)</a>
 </li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.evalApparentState">evalApparentState (grss.prop.prop_simulation.propSimulation property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.evalApparentState">evalApparentState (grss.prop.prop_simulation.propSimulation property)</a>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.evalMeasurements">evalMeasurements (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.Event.html#grss.prop.prop_simulation.Event">Event (class in grss.prop.prop_simulation)</a>
 </li>
@@ -1022,11 +1024,13 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.observerInfo">observerInfo (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.opik">opik (grss.prop.prop_simulation.CloseApproachParameters property)</a>
 </li>
-      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.opticalObsEval">opticalObsEval (grss.prop.prop_simulation.propSimulation property)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.opticalObs">opticalObs (grss.prop.prop_simulation.propSimulation property)</a>
+</li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.opticalPartials">opticalPartials (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1090,12 +1094,16 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.NongravParamaters.html#grss.prop.prop_simulation.NongravParamaters.r0_au">r0_au (grss.prop.prop_simulation.NongravParamaters property)</a>
 </li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.radarObs">radarObs (grss.prop.prop_simulation.propSimulation property)</a>
+</li>
       <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.radarObserver">radarObserver (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
-      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.radarObsEval">radarObsEval (grss.prop.prop_simulation.propSimulation property)</a>
+      <li><a href="_autosummary/grss.prop.prop_simulation.propSimulation.html#grss.prop.prop_simulation.propSimulation.radarPartials">radarPartials (grss.prop.prop_simulation.propSimulation property)</a>
 </li>
       <li><a href="_autosummary/grss.fit.fit_utils.radec2icrf.html#grss.fit.fit_utils.radec2icrf">radec2icrf() (in module grss.fit.fit_utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.Body.html#grss.prop.prop_simulation.Body.radius">radius (grss.prop.prop_simulation.Body property)</a>
 
       <ul>
@@ -1104,8 +1112,6 @@ document.write(`
         <li><a href="_autosummary/grss.prop.prop_simulation.SpiceBody.html#grss.prop.prop_simulation.SpiceBody.radius">(grss.prop.prop_simulation.SpiceBody property)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.fit.fit_utils.rec2lat.html#grss.fit.fit_utils.rec2lat">rec2lat() (in module grss.fit.fit_utils)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_unscented.SigmaPoints.html#grss.prop.prop_unscented.SigmaPoints.reconstruct">reconstruct() (grss.prop.prop_unscented.SigmaPoints method)</a>
@@ -1310,7 +1316,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Nov 28, 2023.
+  Last updated on Nov 30, 2023.
   <br/>
 </p>
   </div>
