--- a/genindex.html
+++ b/genindex.html
@@ -50,7 +50,7 @@
     <link rel="search" title="Search" href="search.html" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="docsearch:language" content="en"/>
-    <meta name="docbuild:last-update" content="Feb 05, 2024"/>
+    <meta name="docbuild:last-update" content="Feb 17, 2024"/>
   </head>
   
   
@@ -610,18 +610,30 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit.fit_optical.deweight_obs.html#grss.fit.fit_optical.deweight_obs">deweight_obs() (in module grss.fit.fit_optical)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.dist">dist (grss.prop.prop_simulation.CloseApproachParameters property)</a>
 
       <ul>
         <li><a href="_autosummary/grss.prop.prop_simulation.ImpactParameters.html#grss.prop.prop_simulation.ImpactParameters.dist">(grss.prop.prop_simulation.ImpactParameters property)</a>
 </li>
       </ul></li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.dt">dt (grss.prop.prop_simulation.CloseApproachParameters property)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop.prop_simulation.ImpactParameters.html#grss.prop.prop_simulation.ImpactParameters.dt">(grss.prop.prop_simulation.ImpactParameters property)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegrationParameters.html#grss.prop.prop_simulation.IntegrationParameters.dt0">dt0 (grss.prop.prop_simulation.IntegrationParameters property)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegrationParameters.html#grss.prop.prop_simulation.IntegrationParameters.dtChangeFactor">dtChangeFactor (grss.prop.prop_simulation.IntegrationParameters property)</a>
 </li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.CloseApproachParameters.html#grss.prop.prop_simulation.CloseApproachParameters.dTLinMinusT">dTLinMinusT (grss.prop.prop_simulation.CloseApproachParameters property)</a>
+
+      <ul>
+        <li><a href="_autosummary/grss.prop.prop_simulation.ImpactParameters.html#grss.prop.prop_simulation.ImpactParameters.dTLinMinusT">(grss.prop.prop_simulation.ImpactParameters property)</a>
+</li>
+      </ul></li>
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegrationParameters.html#grss.prop.prop_simulation.IntegrationParameters.dtMax">dtMax (grss.prop.prop_simulation.IntegrationParameters property)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.IntegrationParameters.html#grss.prop.prop_simulation.IntegrationParameters.dtMin">dtMin (grss.prop.prop_simulation.IntegrationParameters property)</a>
@@ -629,6 +641,10 @@ document.write(`
       <li><a href="_autosummary/grss.prop.prop_simulation.Constants.html#grss.prop.prop_simulation.Constants.du2m">du2m (grss.prop.prop_simulation.Constants property)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_simulation.Constants.html#grss.prop.prop_simulation.Constants.duptu2mps">duptu2mps (grss.prop.prop_simulation.Constants property)</a>
+</li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.BPlaneParameters.html#grss.prop.prop_simulation.BPlaneParameters.dx">dx (grss.prop.prop_simulation.BPlaneParameters property)</a>
+</li>
+      <li><a href="_autosummary/grss.prop.prop_simulation.BPlaneParameters.html#grss.prop.prop_simulation.BPlaneParameters.dy">dy (grss.prop.prop_simulation.BPlaneParameters property)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1376,7 +1392,7 @@ By Rahil Makadia
   
   <div class="footer-item">
     <p class="last-updated">
-  Last updated on Feb 05, 2024.
+  Last updated on Feb 17, 2024.
   <br/>
 </p>
   </div>
