deploy: 83e71f44cc5f11e121e37076b2318565982ffe41

--- a/genindex.html
+++ b/genindex.html
@@ -816,6 +816,22 @@ document.write(`
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="cppsummary/spk.html#_CPPv48daf_freeP7DafInfo">daf_free (C++ function)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv48daf_initRKNSt6stringERKNSt6stringE">daf_init (C++ function)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv47DafInfo">DafInfo (C++ struct)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N7DafInfo12allocatedNumE">DafInfo::allocatedNum (C++ member)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N7DafInfo3lenE">DafInfo::len (C++ member)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N7DafInfo3mapE">DafInfo::map (C++ member)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N7DafInfo3numE">DafInfo::num (C++ member)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N7DafInfo7targetsE">DafInfo::targets (C++ member)</a>
+</li>
       <li><a href="_autosummary/grss.prop.prop_utils.data_to_ellipse.html#grss.prop.prop_utils.data_to_ellipse">data_to_ellipse() (in module grss.prop.prop_utils)</a>
 </li>
       <li><a href="_autosummary/grss.prop.prop_utils.days_to_dhms.html#grss.prop.prop_utils.days_to_dhms">days_to_dhms() (in module grss.prop.prop_utils)</a>
@@ -840,6 +856,8 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.libgrss.delta_at_utc.html#grss.libgrss.delta_at_utc">delta_at_utc() (in module grss.libgrss)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cppsummary/timeconvert.html#_CPPv412delta_et_tdbK4real">delta_et_tdb (C++ function)</a>
 </li>
       <li><a href="_autosummary/grss.libgrss.delta_et_tdb.html#grss.libgrss.delta_et_tdb">delta_et_tdb() (in module grss.libgrss)</a>
@@ -848,8 +866,6 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.libgrss.delta_et_utc.html#grss.libgrss.delta_et_utc">delta_et_utc() (in module grss.libgrss)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.libgrss.ImpulseEvent.html#grss.libgrss.ImpulseEvent.deltaV">deltaV (grss.libgrss.ImpulseEvent property)</a>
 </li>
       <li><a href="_autosummary/grss.fit.fit_optical.deweight_obs.html#grss.fit.fit_optical.deweight_obs">deweight_obs() (in module grss.fit.fit_optical)</a>
@@ -900,17 +916,19 @@ document.write(`
 </li>
       <li><a href="_autosummary/grss.fit.fit_optical.eliminate_obs.html#grss.fit.fit_optical.eliminate_obs">eliminate_obs() (in module grss.fit.fit_optical)</a>
 </li>
-      <li><a href="_autosummary/grss.libgrss.PropSimulation.html#grss.libgrss.PropSimulation.ephem">ephem (grss.libgrss.PropSimulation property)</a>
-</li>
       <li><a href="cppsummary/spk.html#_CPPv49Ephemeris">Ephemeris (C++ struct)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris5cacheE">Ephemeris::cache (C++ member)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris2mbE">Ephemeris::mb (C++ member)</a>
 </li>
+      <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris6mbPathE">Ephemeris::mbPath (C++ member)</a>
+</li>
       <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris14nextIdxToWriteE">Ephemeris::nextIdxToWrite (C++ member)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris2sbE">Ephemeris::sb (C++ member)</a>
+</li>
+      <li><a href="cppsummary/spk.html#_CPPv4N9Ephemeris6sbPathE">Ephemeris::sbPath (C++ member)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv414EphemerisCache">EphemerisCache (C++ struct)</a>
 </li>
@@ -918,10 +936,10 @@ document.write(`
 </li>
       <li><a href="cppsummary/spk.html#_CPPv4N14EphemerisCache1tE">EphemerisCache::t (C++ member)</a>
 </li>
-      <li><a href="_autosummary/grss.fit.fit_utils.et2mjd.html#grss.fit.fit_utils.et2mjd">et2mjd() (in module grss.fit.fit_utils)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.fit.fit_utils.et2mjd.html#grss.fit.fit_utils.et2mjd">et2mjd() (in module grss.fit.fit_utils)</a>
+</li>
       <li><a href="cppsummary/timeconvert.html#_CPPv48et_to_jdK4real">et_to_jd (C++ function)</a>, <a href="cppsummary/timeconvert.html#_CPPv48et_to_jdK4realR4real">[1]</a>
 </li>
       <li><a href="cppsummary/timeconvert.html#_CPPv49et_to_mjdK4real">et_to_mjd (C++ function)</a>, <a href="cppsummary/timeconvert.html#_CPPv49et_to_mjdK4realR4real">[1]</a>
@@ -1433,6 +1451,8 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/grss.libgrss.NongravParameters.html#grss.libgrss.NongravParameters.m">m (grss.libgrss.NongravParameters property)</a>
 </li>
+      <li><a href="_autosummary/grss.libgrss.PropSimulation.html#grss.libgrss.PropSimulation.map_ephemeris">map_ephemeris() (grss.libgrss.PropSimulation method)</a>
+</li>
       <li><a href="_autosummary/grss.libgrss.Body.html#grss.libgrss.Body.mass">mass (grss.libgrss.Body property)</a>
 
       <ul>
@@ -1660,10 +1680,10 @@ document.write(`
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation6eventsE">PropSimulation::events (C++ member)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation6extendE4realNSt6vectorI4realEENSt6vectorINSt6vectorI4realEEEE">PropSimulation::extend (C++ function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation26get_integration_parametersEv">PropSimulation::get_integration_parameters (C++ function)</a>
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation17get_sim_constantsEv">PropSimulation::get_sim_constants (C++ function)</a>
@@ -1687,6 +1707,8 @@ document.write(`
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation14isPreprocessedE">PropSimulation::isPreprocessed (C++ member)</a>
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation13lightTimeEvalE">PropSimulation::lightTimeEval (C++ member)</a>
+</li>
+      <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation13map_ephemerisEv">PropSimulation::map_ephemeris (C++ function)</a>
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation4nameE">PropSimulation::name (C++ member)</a>
 </li>
@@ -1725,6 +1747,8 @@ document.write(`
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation11tEvalMarginE">PropSimulation::tEvalMargin (C++ member)</a>
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation8tEvalUTCE">PropSimulation::tEvalUTC (C++ member)</a>
+</li>
+      <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation15unmap_ephemerisEv">PropSimulation::unmap_ephemeris (C++ function)</a>
 </li>
       <li><a href="cppsummary/simulation.html#_CPPv4N14PropSimulation6xIntegE">PropSimulation::xInteg (C++ member)</a>
 </li>
@@ -1836,26 +1860,14 @@ document.write(`
 </li>
       <li><a href="cppsummary/spk.html#c.SPK_CACHE_SIZE">SPK_CACHE_SIZE (C macro)</a>
 </li>
-      <li><a href="cppsummary/spk.html#_CPPv48spk_calcP7SpkInfodiPdPdPdPdPdPdPdPdPd">spk_calc (C++ function)</a>
+      <li><a href="cppsummary/spk.html#_CPPv48spk_calcP7DafInfodiPdPdPdPdPdPdPdPdPd">spk_calc (C++ function)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv48spk_initRKNSt6stringE">spk_init (C++ function)</a>
 </li>
-      <li><a href="cppsummary/spk.html#_CPPv47SpkInfo">SpkInfo (C++ struct)</a>
-</li>
-      <li><a href="cppsummary/spk.html#_CPPv4N7SpkInfo12allocatedNumE">SpkInfo::allocatedNum (C++ member)</a>
-</li>
-      <li><a href="cppsummary/spk.html#_CPPv4N7SpkInfo3lenE">SpkInfo::len (C++ member)</a>
-</li>
-      <li><a href="cppsummary/spk.html#_CPPv4N7SpkInfo3mapE">SpkInfo::map (C++ member)</a>
+      <li><a href="cppsummary/spk.html#_CPPv49SpkTarget">SpkTarget (C++ struct)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="cppsummary/spk.html#_CPPv4N7SpkInfo3numE">SpkInfo::num (C++ member)</a>
-</li>
-      <li><a href="cppsummary/spk.html#_CPPv4N7SpkInfo7targetsE">SpkInfo::targets (C++ member)</a>
-</li>
-      <li><a href="cppsummary/spk.html#_CPPv49SpkTarget">SpkTarget (C++ struct)</a>
-</li>
       <li><a href="cppsummary/spk.html#_CPPv4N9SpkTarget3begE">SpkTarget::beg (C++ member)</a>
 </li>
       <li><a href="cppsummary/spk.html#_CPPv4N9SpkTarget3cenE">SpkTarget::cen (C++ member)</a>
@@ -1973,6 +1985,10 @@ document.write(`
 
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/grss.libgrss.PropSimulation.html#grss.libgrss.PropSimulation.unmap_ephemeris">unmap_ephemeris() (grss.libgrss.PropSimulation method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="cppsummary/gr15.html#_CPPv415update_g_with_bRKNSt6vectorINSt6vectorI4realEEEERK6size_tP4real">update_g_with_b (C++ function)</a>
 </li>
